Version 0.9.0alpha6 - 2007-03-XX
 * Bug Fixes:
   * Artist names from ARs should be translated, too.
 * Internals:
   * The browser integration HTTP server rewritten using QTcpServer.

Version 0.9.0alpha5 - 2007-03-18
 * New Features:
   * Replace Æ with AE in file/directory names. (#2512)
   * "Add cluster as release" (#1049)
   * Text labels under icon buttons. (#2476)
 * Bug Fixes:
   * Fixed fileId generator (caused problems with drag&drop
     if files with multiple formats are used).
   * Original Metadata not greyed out when no tracks are attached. (#2461)
   * Better detecting of the default Windows browser, with fallback to
     Internet Explorer. (#2502)
   * Better album/track lookup. (#2521)
   * File browser stays 'hidden' after first time use. (#2480)
   * Track length changed in Original Metadata after save. (#2510)
   * "Send PUIDs" button not disabled after albums are removed. (#2506)
   * The Windows package now includes JPEG loader to show cover art
     images correctly. (#2478)

Version 0.9.0alpha4 - 2007-03-09
 * Bug Fixes:
   * Fixed case-insentive file renaming. (#2457, #2513)

Version 0.9.0alpha3 - 2007-03-08
 * New Features:
   * Using of 'performed by' AR types (without instrument or vocal).
   * The "Replace non-ASCII characters" option will try to remove
     accents first. (#2466)
   * Added option to auto-analyze all files. (#2465)
 * Bug Fixes:
   * Fixed file clustering.
   * Added %albumartistsort%, %releasetype% and %releasestatus% to the
     file naming example (#2458)
   * Sanitize dates from ID3 tags. (#2460)
   * Fixed page switching in the options window on error. (#2455)
   * Correct case-insensitive file renaming on Windows (#1003, #2457)
   * Relative paths in the 'Move files to' option are relative to the
     current path of the file. (#2454)
   * Added a .desktop file. (#2470)
   * Release type and status should be in lower case. (#2489)

Version 0.9.0alpha2 - 2007-03-04
 * New Features: