@@ -1,6 +1,7 @@
 Version 0.9.0alpha6 - 2007-03-XX
  * Bug Fixes:
    * Artist names from ARs should be translated, too.
+   * Freeze after answering no to "download the new version" prompt. (#2542)
  * Internals:
    * The browser integration HTTP server rewritten using QTcpServer.
 
